[package]
name = "twitter-clone-study"
version = "0.1.0"
authors = ["Elton Zheng <elton.zheng.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
chrono = { version="0.4", features=["serde"] }
diesel = { version="1.4.5", features=["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
env_logger = "0.8.1"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.117"
serde_json = "1.0.59"
uuid = { version="0.8", features=["serde", "v4"] }
